Major changes to identity

--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -12,7 +12,11 @@
       <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
       <section name="resources" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
     </sectionGroup>
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
+  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="KetoSavageWeb.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+                                                                                    </configSections>
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
     <!--<add name="ApplicationServices" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -195,4 +199,17 @@
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
       -->
-    </glimpse></configuration>
+    </glimpse><applicationSettings>
+    <KetoSavageWeb.Properties.Settings>
+      <setting name="DefaultPassword" serializeAs="String">
+        <value>S4v4g3!</value>
+      </setting>
+      <setting name="DefaultAdminAccount" serializeAs="String">
+        <value>SuperUser</value>
+      </setting>
+      <setting name="DefaultAdminEmail" serializeAs="String">
+        <value>mjensen@razoredgetech.com</value>
+      </setting>
+    </KetoSavageWeb.Properties.Settings>
+  </applicationSettings>
+</configuration>
