Models now seem to be working.  Now to shift to programs.

--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -552,6 +552,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803082123265_Initial.cs" />
+    <Compile Include="Migrations\201803082123265_Initial.Designer.cs">
+      <DependentUpon>201803082123265_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Abstract\UserManaged.cs" />
     <Compile Include="Models\AccountModels.cs" />
@@ -578,6 +582,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Programs\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803082123265_Initial.resx">
+      <DependentUpon>201803082123265_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
