--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -210,6 +210,12 @@
       <setting name="DefaultAdminEmail" serializeAs="String">
         <value>mjensen@razoredgetech.com</value>
       </setting>
+      <setting name="DefaultCoach" serializeAs="String">
+        <value>RobertSikes</value>
+      </setting>
+      <setting name="DefaultCoachEmail" serializeAs="String">
+        <value>chief@ketosavage.com</value>
+      </setting>
     </KetoSavageWeb.Properties.Settings>
   </applicationSettings>
 </configuration>
