--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -519,6 +519,7 @@
     <Content Include="Views\Account\_loginPartial.cshtml" />
     <Content Include="Views\ClientPrograms\Index.cshtml" />
     <Content Include="Views\ClientPrograms\_clientGridViewPartial.cshtml" />
+    <Content Include="Views\Account\_registerPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -534,6 +535,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Abstract\KSBaseController.cs" />
+    <Compile Include="Controllers\Abstract\KSUserManagedController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -552,20 +554,20 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201803092351536_Initial.cs" />
-    <Compile Include="Migrations\201803092351536_Initial.Designer.cs">
-      <DependentUpon>201803092351536_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201803111631012_Initial.cs" />
+    <Compile Include="Migrations\201803111631012_Initial.Designer.cs">
+      <DependentUpon>201803111631012_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Abstract\UserManaged.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\ClientProgramViewModel.cs" />
+    <Compile Include="Models\UserPrograms.cs" />
+    <Compile Include="ViewModels\ClientProgramViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\KSDataContext.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Models\ProgramModels.cs" />
-    <Compile Include="Models\Role.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IProgramRepository.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -577,6 +579,7 @@
     <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\UserProfileRepository.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Util\Controllers\UserManagedController.cs" />
     <Compile Include="Util\Interfaces\IDataLayer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -584,8 +587,8 @@
     <Folder Include="Views\Programs\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201803092351536_Initial.resx">
-      <DependentUpon>201803092351536_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803111631012_Initial.resx">
+      <DependentUpon>201803111631012_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
